# django-ai-blocks

./: .gitignore  README.md  pyproject.toml
django_ai_blocks/: __init__.py  admin.py  apps.py  conf.py
django_ai_blocks/blocks/: admin.py  builtins.py  urls.py
django_ai_blocks/blocks/models/: __init__.py  base_user_config.py  block_column_config.py  block_filter_config.py  block_filter_layout.py  config_templates.py  pivot_config.py
django_ai_blocks/blocks/services/: __init__.py  blocks_filter_utils.py  column_config.py  field_rules.py  filtering.py  seeding.py
django_ai_blocks/blocks/tests/: test_blocks_filter_utils.py
django_ai_blocks/blocks/views/: chart.py  column_config.py  filter_choices.py  filter_config.py  filter_layout.py  inline_edit.py  pivot.py  pivot_config.py  pivot_filter_config.py  table.py
django_ai_blocks/layout/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
django_ai_blocks/layout/helpers/: formsets.py
django_ai_blocks/migrations/: 0001_initial.py  0002_alter_blockcolumnconfig_options_and_more.py
django_ai_blocks/permissions/: checks.py  documentation.md  tests.py  views.py
django_ai_blocks/permissions/forms/: permission_form_mixin.py
django_ai_blocks/permissions/signals/: __init__.py  (+1 more)
django_ai_blocks/templatetags/: __init__.py  block_urls.py  dict_extras.py
django_ai_blocks/utils/: __init__.py  context_processors.py
django_ai_blocks/workflow/: apply_transition.py  documentation.md  permissions.py  urls.py  utils.py
examples/demo_project/: README.md  db.sqlite3  manage.py  sync_air_quality.py
(+56 files in other folders)
