[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ai-blocks"
version = "0.1.0"
description = "Modular Django blocks framework for AI-assisted interfaces."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Django AI Blocks Maintainers" }]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=4.2",
    "django-crispy-forms>=2.1",
    "plotly>=5.18",
    "asgiref>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "isort>=5.12",
]

[tool.setuptools.packages.find]
include = ["django_ai_blocks*"]
